# INF573-Projet

./: CMakeLists.txt  README.md  readme.md  related_work.md
detection/: CMakeLists.txt  main.cpp
detection/BGS/: BGS.hpp  FramesDiff.cpp  FramesDiff.hpp
extra/: plaque.ipynb
main/: CMakeLists.txt  bgs_comparison.cpp  main.cpp  pedestrian_detection.cpp  tracker_test.cpp
src/: CMakeLists.txt  definition.h
src/Classification/: Classifier.cpp  Classifier.h
src/Detector/: BGS.cpp  BGS.h  CarDetector.cpp  CarDetector.h  DetectorBase.cpp  DetectorBase.h  FaceDetector.cpp  FaceDetector.h  MotionDetector.cpp  MotionDetector.h  PeopleDetector.cpp  PeopleDetector.h
src/Tracker/: Kalman.cpp  Kalman.h  MultiTracker.cpp  MultiTracker.h  SingleTracker.cpp  SingleTracker.h
src/Tracker/HungarianAlg/: HungarianAlg.cpp  HungarianAlg.h
